apps/linkding/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  namespace: homelab
spec:
  selector:
    app: linkding
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 9090
